# my_feed

./: README.md  index  pyproject.toml  setup.cfg
backend/: README.md  db.go  go.mod
frontend/: .env.production  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  run
frontend/components/: About.tsx  ErrorBoundary.tsx  FeedItem.tsx
frontend/pages/: index.tsx
frontend/styles/: Index.module.css  globals.css
scripts/: feed-cli  feed-mal-tmdb  feed-thoughts  feed_check  feed_index  feed_live_update  functions.sh  mal-feed-tmdb  sync_with_retry  tmdb-list-errors  tmdb-remove-errors
src/my_feed/: __main__.py
src/my_feed/sources/: facebook_spotify_listens.py  games.py  listens.py  mal.py  mpv.py  nextalbums.py
src/my_feed/sources/trakt/: __init__.py  tmdb.py
