[project]
name = "my_feed"
version = "0.1.0"
description = "A personal feed/website"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["arrow", "chess", "logzero", "mutagen", "url-cache"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
my_feed = "my_feed.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/my_feed"

[tool.mypy]
pretty = "True"
disallow_any_generics = "False"
show_error_context = "True"
show_error_codes = "True"
namespace_packages = "True"
disallow_subclassing_any = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"
files = "setup.py, src/my_feed, backend, tests"
plugins = "pydantic.mypy"

[tool.pytest.ini_options]
addopts = ["-ra"]

[tool.setuptools.packages.find]
include = []
exclude = []
